# micro-lab-template

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  micro-lab-template-review.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  security.yml
config/: languages.json
docs/: AGENTS.md  SESSION_LOG.md  TASKS.md  block-contract.md  canonical.md  ci-and-security.md  principles.md  structure.md  v2-roadmap.md
scripts/: _lib.sh  check-line-endings.sh  new-repo.sh  selftest.sh  setup-hooks.sh  validate-language-config.sh
templates/_shared/: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
templates/_shared/.github/: CODEOWNERS  pull_request_template.md
templates/_shared/.github/workflows/: ci.yml  security.yml
templates/go/: Dockerfile  go.mod  go.sum  justfile
templates/go/cmd/lab-cli/: main.go
templates/go/internal/blocks/config/: config.go  config_test.go
templates/go/internal/blocks/errors/: errors.go  errors_test.go
templates/go/internal/blocks/logging/: logging.go  logging_test.go
templates/rust/: Cargo.toml  Dockerfile  justfile
templates/rust/crates/blocks/: Cargo.toml  README.md
templates/rust/crates/blocks/src/: config.rs  errors.rs  lib.rs  logging.rs
templates/rust/crates/lab_cli/: Cargo.toml
templates/rust/crates/lab_cli/src/: main.rs
